--- a/backend/languages/clockdown-pt_BR.po
+++ b/backend/languages/clockdown-pt_BR.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Clockdown\n"
+"Project-Id-Version: Commerce\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
